--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>React</title>
     <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
     <div id="root">
         
     </div>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="./app.js"> 
+
+<script type="module" src="./app.js"> 
 </script>
 </body>
 </html>
